projects/k8s-gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-reference
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
