projects/k8s-gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: devsecops-reference
spec:
  type: ClusterIP
  selector:
    app: sample-api
  ports:
    - name: http
      port: 8080
      targetPort: http
